--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <img src="./assets/info5.png" alt="Sweeper">
             </div>
-        <div id="lg"></div><img src="./assets/logo.png" alt="Optimism!"></div>
+        <div id="lg"></div><img src="./assets/logo.png" alt="Optimism!" onclick="rippunish()"></div>
         </div>
     </body>
 </html>
